cybether/40-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cybether-backend
  namespace: cybether
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cybether-backend
  template:
    metadata:
      labels:
        app: cybether-backend
    spec:
      containers:
        - name: cybether-backend
          # renovate: datasource=docker depName=ghcr.io/darkchariot/cybether-backend versioning=semver
          image: ghcr.io/darkchariot/cybether-backend:latest

          command: ["/bin/sh", "-c"]
          args:
            - |
              export DATABASE_URL="postgresql://${DB_USER}:${DB_PASS}@${DB_HOST}:${DB_PORT}/${DB_NAME}";
              exec gunicorn --bind 0.0.0.0:5000 wsgi:app

          ports:
            - containerPort: 5000
