cybether/30-svc-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: cybether-backend
  namespace: cybether
spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 5000
  selector:
    app: cybether-backend
