cybether/31-svc-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: cybether-frontend
  namespace: cybether
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: cybether-frontend
