cybether/32-svc-postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: cybether-postgres
  namespace: cybether
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: cybether-postgres
