cybether/33-authentik-proxy.yaml
apiVersion: v1
kind: Service
metadata:
  name: authentik-proxy
  namespace: cybether
spec:
  type: ExternalName
  externalName: authentik-server.authentik.svc.cluster.local
  ports:
    - name: https
      port: 9443
      targetPort: 9443
