cybether/50-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cybether
  namespace: cybether
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/proxy-ssl-verify: "false"
    nginx.ingress.kubernetes.io/proxy-ssl-name: "authentik.authentik.svc.cluster.local"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - cybether.white.fm
    - cybether.internal.white.fm
    secretName: cybether-white-fm-tls
  rules:
  - host: cybether.white.fm
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: authentik-proxy
            port:
              number: 9443
  - host: cybether.internal.white.fm
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: authentik-proxy
            port:
              number: 9443
