cybether/51-ingress-internal.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cybether-internal
  namespace: cybether
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - cybether.internal.white.fm
    secretName: cybether-internal-white-fm-tls
  rules:
  - host: cybether.internal.white.fm
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cybether-frontend
            port:
              number: 3000
