cybether/53-httproute-internal.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cybether-internal
  namespace: cybether
spec:
  parentRefs:
    - name: main
      namespace: envoy-gateway-system
      sectionName: https-internal-white-fm
  hostnames:
    - cybether.internal.white.fm
  rules:
    - backendRefs:
        - name: cybether-frontend
          port: 3000
